Fix some overflow issues

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  overflow-wrap: break-word !important;
+  overflow-x: hidden !important;
 }
 
 /* Colors taken form Night Owl */
